Fix HTML structure and formatting issues

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     
     <section class="campus">
         <h1>Our Global campus</h1>
-        <p>LONDON , NEW YORK , WASHINGTON</p>
+        <p>LONDON , NEW YORK , WASHINGTON<br>PLEASE IMAGE CLICK</p>
             <div class="row">
                 <div class="campus-col">
                     <img src="london.png">
@@ -188,6 +188,7 @@
     
 </body>
 </html>
+
 
 
 
