Fix HTML encoding issues in contact.html

--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
                     <div>
                         <i class="fa fa-envelope-o"></i>
                         <span>
-                            <h5>vishalraghu1cjii@gmail.com</h5>
+                            <h5>vrsad82@gmail.com</h5>
                             <p>Email us your query</p>
                         </span>
                     </div>
@@ -105,4 +105,5 @@
 </script> 
     
 </body>
+
 </html>    
